css/main.css
@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900);

body {
  font-family: 'Source Sans Pro', sans-serif;
  font-weight: 400;
  font-size: 12px;

  /*height: 100%;*/
  margin: 0;

}

#bottom, #left, #right {
	background: #BBDAF6;
	position: fixed;
  z-index: 1;
	}
	#left, #right {
		top: 0; bottom: 0;
		width: 25px;
		}
		#left { left: 0; }
		#right { right: 0; }

	#bottom {
		left: 0; right: 0;
		height: 25px;
		}

		#bottom { bottom: 0;
}

#content {
  border-top: none;
  padding: 2em;
  padding-top: 6em;

  height: 100%;
  margin: 0;
}

nav {
    background-color: #384149;
    display: table;
    width: 100%;
    height: 4em;
    padding-left: 2em;
    /*padding-right: 2em;*/

    position: fixed;
    z-index: 3;
    left: 0;
    top: 0;
    color: #e5e5e5;
}

nav ul {
    list-style: none;
    display: table-cell;
    vertical-align: middle;
    padding: 0;
    margin: 0;
}

nav li {
    display: inline;
    margin: .5em;
    font-size: 1.3em;
}

nav a {
    color: #e5e5e5;
    text-decoration: none;
}

nav a:hover {
    color: white;
}

div h1 {
  font-family: 'Source Sans Pro', sans-serif;
	font-size: 2em;
  font-weight: 900;
	text-align: center;
}

h3 {
    font-weight: 900;
}

li {
    list-style: none;
    font-size: 14pt;
}

ul {
    padding-left: 20px;
}

.bar-group {
  margin: 0.5em;

  margin-bottom: 2.2em;
}

#login {
	text-align: right;
}

#logo {
	text-align: center;
  font-size: 5em;
  font-family: 'Source Sans Pro';
  font-weight: 900;
}

#results {
	margin-left: auto;
	margin-right: auto;
	width: 600px;
}

#results h1 {
	text-align: left;
}

#results ul {
	list-style-type: none;
}

#search {
	margin-left: auto;
	margin-right: auto;
	text-align: center;
	width: 600px;
}

#top {
	text-align: center;
}

body {
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: 400;
    margin: 0;
    padding: 0;
}

#login {
    float: right;
}

#add {
  text-decoration: none;
  color: #BBDAF6 !important;
}

#add:hover {
  color: #8298ac !important;
}

